# Tart

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  default-tart-variables.yaml  exp.sh  install.sh  run.sh  tart
Example/: main.cc
ExampleLib/: kakefile.yaml
ExampleLib/include/: test.h
ExampleWorkspace/: .gitignore
ExampleWorkspace/Example2Lib/: kakefile.yaml  tart.yaml
ExampleWorkspace/Example2Lib/include/: foo.h
ExampleWorkspace/Example2Lib/src/: foo.cc
ExampleWorkspace/Example3Lib/: kakefile.yaml  tart.yaml
ExampleWorkspace/Example3Lib/include/: bar.h
ExampleWorkspace/Example3Lib/src/: bar.cc
ExampleWorkspace/ExampleApp/: CMakeLists.txt  main.cc  tart.yaml
ExampleWorkspace/ExampleApp/src/: main.cc
ExampleWorkspace/ExampleFramework/: CMakeLists.txt  rocket.h  tart.yaml
ExampleWorkspace/ExampleFramework/src/: rocket.mm
ExampleWorkspace/ExampleLib/: kakefile.yaml
ExampleWorkspace/ExampleLib/src/: test.cc
ExampleWorkspace/ExampleLibA/: tart.yaml
ExampleWorkspace/ExampleLibA/include/: class-a.h
ExampleWorkspace/ExampleLibA/src/: class-a.cc
ExampleWorkspace/ExampleLibB/: tart.yaml
ExampleWorkspace/ExampleLibB/include/: class-b.h
ExampleWorkspace/ExampleLibB/src/: class-b.cc
ExampleWorkspace/ExampleLibC/: tart.yaml
ExampleWorkspace/ExampleLibC/include/: class-c.h
ExampleWorkspace/ExampleLibC/src/: class-c.cc
ExampleWorkspace2Lib/: kakefile.yaml
Experimental/: .gitignore  CMakeLists.txt  exp.sh  main.cc  tart.yaml
Modules/: add-package.cmake  add-tart-dependency.cmake  add-tart-target.cmake  configure-target.cmake  configure-tart-default.cmake  configure-xcode.cmake  git-tools.cmake  inherit-target-properties.cmake  lib-checker.cmake  preinstalled-finder.cmake  process-dependency-entry.cmake  process-package-properties.cmake  tart-definitions.cmake  tart-include.cmake  tart-log.cmake  tart-yaml-tools.cmake  yaml-parser-beta.cmake  yaml-parser-tools.cmake  yaml-parser.cmake
Modules/CompilerConfiguration/: configure-xcode.cmake
Modules/Core/: add-tart-dependency.cmake  add-tart-target.cmake  generate-tart-target.cmake
Modules/ExternalDependencies/: find-external-dependency.cmake
Modules/PackageCheckout/: git-tools.cmake  lib-checker.cmake
Modules/PackageConfiguration/: configure-tart-default.cmake  default-package-configuration.cmake  get-package-files.cmake  get-source-files.cmake  process-dependency-entry.cmake  process-package-compile-definitions.cmake  process-package-properties.cmake  set-default-configuration.cmake  set-package-header-files.cmake  set-package-source-files.cmake
Modules/PreinstalledPackages/: preinstalled-finder.cmake
Modules/System/: tart-definitions.cmake  tart-log.cmake  tart-system-var.cmake  tart-system-variables.cmake
Modules/YamlParser/: tart-yaml-tools.cmake  yaml-parser-tools.cmake  yaml-parser.cmake
Scripts/: tlog.sh  xcode.sh
Test/: CMakeLists.txt  tart.yaml
test/: output.txt  test.sh  test.yml  testregex.php
