CMAKE_MINIMUM_REQUIRED (VERSION 3.2)

# Include Tart Modules
INCLUDE("${CMAKE_CURRENT_LIST_DIR}/../Modules/tart-include.cmake")

################################
# Experimental Executable
################################

PROJECT("Experimental")

################################
# Define Sources and Headers
################################

SET(SOURCES "${CMAKE_CURRENT_LIST_DIR}/main.cc")
SET(TART_CURRENT_WORKSPACE_DIR "${CMAKE_CURRENT_LIST_DIR}/Tart-Packages/")
ADD_EXECUTABLE("Experiment" "${CMAKE_CURRENT_LIST_DIR}/main.cc")

# CHECK_IF_GIT_URL("https://github.com/Tartness/Tart.git" IS_GIT_URL)
# MESSAGE(${IS_GIT_URL})

GET_YAML_ENTRIES_WITH_INDENDTS("${CMAKE_CURRENT_LIST_DIR}/tart.yaml" ENTRIES ENTRY_INDENTS)
# TART_TMP("${ENTRIES}")
# TART_TMP("${ENTRY_INDENTS}")

GET_ENTRY_SUBTREE("configuration_properties" "${ENTRIES}" "${ENTRY_INDENTS}" CHILD_ENTRIES CHILD_INDENTS)
PROCESS_DEPENDENCY_ENTRIES("Experiment" "${ENTRIES}" "${ENTRY_INDENTS}")
PROCESS_TARGET_PROPERTIES("Experiment" "${ENTRIES}" "${ENTRY_INDENTS}")
PROCESS_CUSTOM_CONFIG_PROPERTIES("Experiment" "${ENTRIES}" "${ENTRY_INDENTS}")
GET_ENTRY_SUBTREE("dependency" "${ENTRIES}" "${ENTRY_INDENTS}" CHILD_ENTRIES CHILD_INDENTS)
GET_ENTRY_VALUES("dependency" "${ENTRIES}" "${ENTRY_INDENTS}" VALUES HAS_SUBTREE)
TART_TMP(${TART_CURRENT_WORKSPACE_DIR})
# TART_TMP("${CHILD_ENTRIES}")
# TART_TMP("${CHILD_INDENTS}")
# TART_TMP("${VALUES}")

# PARSE_YAML("${CMAKE_CURRENT_LIST_DIR}/tart.yaml" NODE_NAMES NODE_VALS NODE_INDENTS)
# MESSAGE("${NODE_VALS}")
# MESSAGE("${NODE_NAMES}")
# MESSAGE("${NODE_INDENTS}")
# 
# FIND_LIST_VALUE("dependency" "${NODE_NAMES}" "${NODE_VALS}" TARGET_PROPERTIES_LIST)
# MESSAGE("${TARGET_PROPERTIES_LIST}")
# 
# GET_GIT_REPO_URL_AND_TAG_FROM_DETAILS("github;Tartness;1.0" "ExampleLibD" GIT_URL GIT_TAG)
# MESSAGE(${GIT_URL})
# MESSAGE(${GIT_TAG})


# ASSERT_PACKAGE_AVAILABILITY("https://github.com/Tartness/ExampleLibD.git" "2.0" "${CMAKE_CURRENT_LIST_DIR}/../ExampleWorkspace")
